--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.17"
   },
